# llamadas

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: despliegue.yml
aplicacion/: __init__.py  configuracion.py  principal.py
aplicacion/audio/: __init__.py  convertidor_audio.py  detector_voz.py
aplicacion/base_datos/: conexion.py  repositorio_reservaciones.py
aplicacion/conversacion/: __init__.py  flujo_reservacion.py  indice_lenguaje.py  (+2 more)
asterisk/: ari.conf.plantilla  extensions.conf  extensions_entrante.conf.plantilla  http.conf  pjsip.conf  pjsip_troncal.conf.plantilla
configuracion/: configuracion_ejemplo.yaml
migraciones/: 001_inicial.sql  002_inventario.sql
prompts/: sistema_ollama.txt
pruebas/: test_api_reservas.py  test_audio.py  test_configuracion_telefonia.py  test_disponibilidad.py  test_eventos_ari.py  test_flujo_reservacion.py  test_indice_lenguaje.py  test_nucleo.py  test_orquestador_ari.py  test_reconocimiento_hibrido.py  test_registros.py  test_servicio.py  test_telefonia.py
scripts/: actualizar.sh  configurar_asterisk.sh  configurar_telefono_tailscale.sh  configurar_troncal_sip.sh  desplegar.sh  instalar_asterisk.sh  instalar_modelos.sh  instalar_ollama.sh  instalar_piper.sh  instalar_servidor.sh  instalar_whisper.sh  preparar_audios.sh  reiniciar_servicios.sh  respaldar_base_datos.sh  restaurar_base_datos.sh  verificar_estado.sh  verificar_prellamada.sh
systemd/: agente-telefonico.env.example  agente-telefonico.service  asterisk.service
(+23 files in other folders)
