[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-telefonico-hotel"
version = "0.1.0"
description = "Núcleo determinístico del agente telefónico de Hotel Villa Margaritas"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7,<3", "PyYAML>=6,<7", "httpx>=0.27,<1"]

[project.optional-dependencies]
desarrollo = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.5,<1", "black>=24,<26"]

[project.scripts]
agente-hotel = "aplicacion.principal:main"

[tool.setuptools.packages.find]
include = ["aplicacion*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["pruebas"]
addopts = "-q"

